--- a/glasGalleriet.html
+++ b/glasGalleriet.html
@@ -9,7 +9,11 @@
     </head>
    
         <h1>Galleriet</h1>
+
+        <div class="container">
+        <p>Det hära är en av många kreationer som<br>kommer från glasmästaren Magic Mike.</p>
         <img src="glaspenis.jpg" alt="Glaspenis" width="600" height="600">
+        </div>
         
     </body>
 </html>
